# gtkretro

./: .gitmodules  CMakeLists.txt  README.md  config.h.in  gdk.pc.in  gtk+.pc.in
.github/workflows/: ci.yml
gdk/: Makefile  gdkevents.c  gdkrgb.c
glib/: Makefile  config.h  garray.c  gbacktrace.c  gcache.c  gconvert.c  gdataset.c  giochannel.c  giounix.c  glibconfig.h  glist.c  gmacros.h  gmem.c  gmessages.c  gscanner.c  gstrfuncs.c  gtree.c  gunidecomp.c  gunidecomp.h  gutf8.c  gutils.c  test1.c
gtk/: Makefile  gtkrc.c  gtkthemes.c
include/glib/: gstrfuncs.h  gutils.h
include/gtk/: gtktypeutils.h
src/: CMakeLists.txt
src/gdk/: CMakeLists.txt  gdk.c  gdkevents.c  gdkfont.c  gdkgc.c  gdkim.c  gdkimage.c  gdkinput.c  gdkpixmap.c  gdkrgb.c  gdkselection.c  gdkwindow.c  gxid.c
src/gtk/: CMakeLists.txt  gtkaccellabel.c  gtkalignment.c  gtkbbox.c  gtkbin.c  gtkbindings.c  gtkcalendar.c  gtkcheckbutton.c  gtkclist.c  gtkcolorsel.c  gtkctree.c  gtkcurve.c  gtkdnd.c  gtkeditable.c  gtkentry.c  gtkfilesel.c  gtkfixed.c  gtkfontsel.c  gtkhandlebox.c  gtkhbbox.c  gtkhruler.c  gtkhscale.c  gtkitemfactory.c  gtklabel.c  gtklist.c  gtkmain.c  gtkmenu.c  gtkmisc.c  gtknotebook.c  gtkoptionmenu.c  gtkpacker.c  gtkpreview.c  gtkprogressbar.c  gtkradiobutton.c  gtkrc.c  gtkselection.c  gtksignal.c  gtksocket.c  gtkstatusbar.c  gtkstyle.c  (+11 more)
